:dizzy: Finish: Finalizando Home e ajustando Responsividade do Header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
       "react",
       "react-dom",
       "react-scripts",
-      "node",
-      "*.svg"
+      "node"
     ]
   },
   "include": [
