--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@phosphor-icons/react": "^2.0.8",
     "framer-motion": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-toastify": "^9.1.2",
     "sass": "^1.59.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
   },
