--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "sass": "^1.59.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
   },
